test/e2e/chainsaw/httproute-multi-rule-header/resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: httproute-multi-rule-header-stable-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: httproute-multi-rule-header
---
apiVersion: v1
kind: Service
metadata:
  name: httproute-multi-rule-header-canary-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: httproute-multi-rule-header
